fix: repository URL

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["Joshua Griffith <joshua@beamform.io>"]
 description = "Pairwise Controlled Manifold Approximation (PaCMAP) for dimensionality reduction"
 documentation = "https://docs.rs/pacmap"
-repository = "https://github.com/beamform/pacmap"
+repository = "https://github.com/Beamform/pacmap-rs"
 license = "Apache-2.0"
 keywords = ["embedding", "dimension-reduction", "pacmap", "algorithms"]
 categories = ["science", "algorithms", "mathematics"]
