ci: add caching

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Dependencies
+        uses: daaku/gh-action-apt-install@v4
+        with:
+          packages: libopenblas-dev
+
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: rust-check
+          cache-all-crates: true
 
       - name: Set up Rust toolchain
         uses: actions-rs/toolchain@v1
@@ -45,6 +55,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: rust-test
+          cache-all-crates: true
+
       - name: Set up Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -62,6 +77,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: rust-dependencies
+          cache-all-crates: true
 
       - name: Set up nightly Rust toolchain
         uses: actions-rs/toolchain@v1
