--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,15 +87,11 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
-          profile: minimal
 
-      - name: Install cargo-hack from crates.io
+      - name: Install cargo-udeps
         uses: baptiste0928/cargo-install@v3
         with:
           crate: cargo-udeps
 
       - name: Run cargo udeps
-        uses: actions-rs/cargo@v1
-        with:
-          command: "+nightly udeps"
-          args: --features openblas-system
+        run: cargo +nightly udeps --features openblas-system
