fix: upgrade gcc

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,24 @@ jobs:
       contents: read
 
     steps:
+      - name: Add Ubuntu Toolchain PPA
+        run: |
+          sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+          sudo apt-get update -yq
+
+      - name: Install GCC 13 and BLAS
+        uses: Eeems-Org/apt-cache-action@v1
+        with:
+          packages: gcc-13 g++-13 libopenblas-dev
+
+      - name: Set GCC 13 as default
+        run: |
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 60 \
+            --slave /usr/bin/g++ g++ /usr/bin/g++-13 \
+            --slave /usr/bin/gcov gcov /usr/bin/gcov-13
+          export CC=/usr/bin/gcc-13
+          export CXX=/usr/bin/g++-13
+
       - uses: actions/checkout@v4
 
       - name: Set up Rust toolchain
