--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   release-please:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     outputs:
       release_created: ${{ steps.release.outputs.release_created }}
       tag_name: ${{ steps.release.outputs.tag_name }}
@@ -26,28 +26,15 @@ jobs:
   publish:
     needs: release-please
     if: ${{ needs.release-please.outputs.release_created }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     permissions:
       contents: read
 
     steps:
-      - name: Add Ubuntu Toolchain PPA
-        run: |
-          sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-          sudo apt-get update -yq
-
-      - name: Install GCC 13 and BLAS
+      - name: Install BLAS
         uses: Eeems-Org/apt-cache-action@v1
         with:
-          packages: gcc-13 g++-13 libopenblas-dev
-
-      - name: Set GCC 13 as default
-        run: |
-          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 60 \
-            --slave /usr/bin/g++ g++ /usr/bin/g++-13 \
-            --slave /usr/bin/gcov gcov /usr/bin/gcov-13
-          export CC=/usr/bin/gcc-13
-          export CXX=/usr/bin/g++-13
+          packages: libopenblas-dev
 
       - uses: actions/checkout@v4
 
