--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,14 +12,14 @@ env:
 
 jobs:
   title:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Run Commit Lint
         uses: opensource-nepal/commitlint@v1
 
   check:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Install BLAS
@@ -50,7 +50,7 @@ jobs:
           args: --features openblas-system -- -D warnings
 
   test:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Install BLAS
